examples/test/testpolicy12199.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12199
  namespace: namespace278
spec:
  podSelector:
    matchLabels:
      key19: value7
      key47: value17
      key15: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value17
      podSelector:
        matchLabels:
          key14: value33
          key26: value43
          key41: value11
